<resources>
    <string name="app_name"> نونِہال: بیس لاین سروے </string>
    <string name="action_database">Database Manager</string>
    <string name="action_data_sync">Sync Data</string>
    <string name="btnDownload">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="splashText"> </string>
    <string name="year"> سال </string>
    <string name="month"> مہینہ </string>
    <string name="hh01_headding"> شناخت کی معلومات </string>
    <string name="cb02_headding"> سیکشن سی بی: بچے کی معلومات </string>
    <string name="cs03_headding"> انٹرویو کی تاریخ </string>
    <string name="im04_headding"> سیکشن آئی ایم: حفاظتی ٹیکے </string>
    <string name="pd05_headding"> سیکشن پی ڈی: حمل اور زچگی کے دوران دیکھ بھال </string>
    <string name="bf06_headding"> سیکشن بی ایف: دودھ پلانا ، صحت اور نگہداشت سے متعلق رویے </string>
    <string name="cv07_headding"> سیکشن G5: کوویڈ </string>
    <string name="se08_headding"> سیکشن ایس ای: گھرانے کی خصوصیات </string>
    <string name="hh01"> انٹرویو کی تاریخ </string>
    <string name="hh02"> انٹرویو شروع کرنے کا وقت </string>
    <string name="hh05"> ضلع کا نام </string>
    <string name="hh06"> یونین کونسل </string>
    <string name="hh07"> بلاک، گلی، کالونی، شہر / گاؤں کا نام </string>
    <string name="hh08"> کلسٹر نمبر </string>
    <string name="hh09"> گھرانہ نمبر </string>
    <string name="hh10"> پتہ / ایڈریس (محلہ / نزدیک ترین مشہور جگہ) </string>
    <string name="hh11"> انٹرویو شروع کرنے سے پہلے انٹرویو کے لیے اجازت لیں ۔ کیا آپ کو اجازت مل گئی ۔ </string>
    <string name="hh1101"> ہاں،اجازت مل گئی </string>
    <string name="hh1102"> نہیں، اجازت نہیں ملی </string>
    <string name="hh12"> جواب دہندہ کا نام </string>
    <string name="hh13"> جواب دہندہ کی عمر مکمل سالوں میں </string>
    <string name="hh14"> جواب دہندہ کی جنس: </string>
    <string name="hh1401"> مرد </string>
    <string name="hh1402"> عورت </string>
    <string name="hh15"> جواب دہندہ کی خواندگی کی سطح </string>
    <string name="hh15info"> (اب میں چاہوں گی کہ آپ یہ جملہ پڑھیں۔ جواب دہندہ کو کارڈ دکھائیں۔) اگر جواب دہندہ پورا جملہ نہ پڑھ سکے تو، مزید پوچھیں: کیا آپ جملے کا کوئی بھی حصہ پڑھ سکتے ہیں ؟ </string>
    <string name="hh1501"> بلکل بھی نہیں پڑھ سکتا </string>
    <string name="hh1502"> جملے کا صرف کچھ حصہ پڑھنے کے قابل ہے </string>
    <string name="hh1503"> پورے جملے کو پڑھنے کے قابل ہے </string>
    <string name="hh1504"> مطلوبہ زبان والا کوئی کارڈ موجود نہیں </string>
    <string name="hh1505">نابینا/ نظر کی کمزوری کی شکایت </string>
    <string name="hh16"> جواب دہندہ کی تعلیم </string>
    <string name="hh16info"> (تعلیم کے مکمل کردہ سال تحریر کریں) ناخواندہ کے لیے 55 اور دینی تعلیم کے لیے 22 کا انتخاب کریں۔ </string>
    <string name="hh17"> جواب دہندہ کا پیشہ </string>
    <string name="hh1701"> پروفیشنل / ٹیکنیکل / مینیجیریل </string>
    <string name="hh1702"> دفتری کام </string>
    <string name="hh1703"> کاروبار </string>
    <string name="hh1704"> سیل اور سروسز </string>
    <string name="hh1705">ہُنرمند مزدور </string>
    <string name="hh1706">غیر ہُنر مند مزدور </string>
    <string name="hh1707">گھریلو کام کاج </string>
    <string name="hh1708">زراعت سے متعلق </string>
    <string name="hh1709">طالب علم</string>
    <string name="hh1710">بےروزگار</string>
    <string name="hh1711">ہاتھ سے کام کرنے والے</string>
    <string name="hh1712">ریٹائرڈ،</string>
    <string name="hh1713">خاتون خانہ</string>
    <string name="hh1796">دیگر وضاحت کریں</string>
    <string name="hh18"> کیا جواب دہندہ ہی گھر کا سربراہ ہے ؟ </string>
    <string name="hh1801"> ہاں گھر کا سر براہ ہے </string>
    <string name="hh1802"> نہیں گھر کا کوئی اور فرد ہے </string>
    <string name="hh19"> گھر کے سربراہ کا نام </string>
    <string name="hh20"> گھر کے سربراہ کا پیشہ </string>
    <string name="hh2001"> پروفیشنل / ٹیکنیکل / مینیجیریل </string>
    <string name="hh2002"> دفتری کام </string>
    <string name="hh2003">کاروبار </string>
    <string name="hh2004">سیل اور سروسز</string>
    <string name="hh2005">ہُنرمند مزدور</string>
    <string name="hh2006">غیر ہُنر مند مزدور</string>
    <string name="hh2007">گھریلو کام کاج</string>
    <string name="hh2008">زراعت سے متعلق</string>
    <string name="hh2009">طالب علم</string>
    <string name="hh2010">بےروزگار</string>
    <string name="hh2011">ہاتھ سے کام کرنے والے</string>
    <string name="hh2012">ریٹائرڈ</string>
    <string name="hh2013">خاتون خانہ</string>
    <string name="hh2096">دیگر وضاحت کریں</string>
    <string name="hh21">اس گھرانے میں کل کتنے افراد رہتے ہیں؟</string>
    <string name="hh22"> مرد افراد بشمول ہر عمر کے مرد </string>
    <string name="hh23"> خواتین ، بشمول ہر عمر کی خواتین </string>
    <string name="hh24"> پانچ سال سے کم عمر بچوں کی تعداد - مرد </string>
    <string name="hh25"> پانچ سال سے کم عمر بچوں کی تعداد – خواتین </string>
    <string name="hh26"> گھرانے کے انٹرویو کا نتیجہ: </string>
    <string name="hh26hint"> نوٹ: انٹرویو مکمل نہ ہونے کی صورت میں سپروائزر سے رابطہ کریں۔ </string>
    <string name="hh2601"> مکمل </string>
    <string name="hh2602"> جزوی مکمل </string>
    <string name="hh2603">انکار کردیا </string>
    <string name="hh2604">گھرانے کا کوئی فرد یا سمجھدار جواب دہندہ گھر پر موجود نہیں </string>
    <string name="hh2605">خالی گھر/غیر رہائشی</string>
    <string name="hh2606"> گھر نہیں ملا </string>
    <string name="hh2607"> اس گھر میں 5 سال سے کم عمر کا بچہ موجود نہیں ہے </string>
    <string name="hh2608"> اس گھر / یو سی میں رہتے ہوئے چھ ماہ سے کم عرصہ ہوا ہے </string>
    <string name="hh2696">دیگر وضاحت کریں </string>
    <string name="cb01">لائن نمبر</string>
    <string name="cb02">نام</string>
    <string name="cb03">جنس</string>
    <string name="cb0301">مرد</string>
    <string name="cb0302">عورت</string>
    <string name="cb04">.تاریخ پیدائش </string>
    <string name="cb04info"> (اگر تاریخ پیدائش معلوم نہیں تو ۔9998 ۔98 ۔98 درج کریں)</string>
    <string name="cb04dd">دن</string>
    <string name="cb04mm">مہینے</string>
    <string name="cb04yy">سال</string>
    <string name="cb05">عمر</string>
    <string name="cb0501">سال</string>
    <string name="cb0502">مہینے</string>
    <string name="cb06">جواب دہندہ سے رشتہ</string>
    <string name="cb0601">ماں</string>
    <string name="cb0602">باپ</string>
    <string name="cb0603"> دیکھ بھال کرنے والا (ماں/ باپ موجود نہیں) </string>
    <string name="cb0696"> دیگر گھر کے افراد </string>
    <string name="motherinfo"> والدہ: کے بارے میں معلومات </string>
    <string name="cb07"> نام </string>
    <string name="cb08"> عمر </string>
    <string name="cb09"> تعلیم </string>
    <string name="cb10"> پیشہ </string>
    <string name="cb1001"> پروفیشنل / ٹیکنیکل / مینیجیریل </string>
    <string name="cb1002"> دفتری کام </string>
    <string name="cb1003"> کاروبار </string>
    <string name="cb1004"> سیل اور سروسز </string>
    <string name="cb1005"> ہُنرمند مزدور </string>
    <string name="cb1006"> غیر ہُنر مند مزدور </string>
    <string name="cb1007"> گھریلو کام کاج </string>
    <string name="cb11"> ماں موجود ہے ؟ </string>
    <string name="cb1101"> ہاں </string>
    <string name="cb1102"> نہیں </string>
    <string name="fatherinfo"> والد: کے بارے میں معلومات </string>
    <string name="cb12"> نام </string>
    <string name="cb13"> تعلیم </string>
    <string name="cb14"> شعبہ</string>
    <string name="cb1401">پروفیشنل/ٹیکنیکل/ مینیجیریل</string>
    <string name="cb1402">دفتری کام </string>
    <string name="cb1403">کاروبار</string>
    <string name="cb1404">سیل اور سروسز</string>
    <string name="cb1405">ہُنرمند مزدور </string>
    <string name="cb1406">غیر ہُنر مند مزدور </string>
    <string name="cb1407">گھریلو کام کاج </string>
    <string name="cb1408">زراعت</string>
    <string name="cb1409">طالب علم </string>
    <string name="cb1410">بےروزگار</string>
    <string name="cb1411">ہاتھ سے کام کرنے والے </string>
    <string name="cb1412">ریٹائرڈ،</string>
    <string name="cb1413">خاتون خانہ</string>
    <string name="cb1496">دیگر وضاحت کریں</string>
    <string name="cb1008">زراعت</string>
    <string name="cb15">پیدائشی وزن (کلوگرام میں۔)</string>
    <string name="cb1598">معلوم نہیں</string>
    <string name="cb17"> جب آپ کے بچے (نام) کی پیدائش ہوئی تھی ، کیا وہ بہت بڑا تھا، اوسطاً سے بڑا، اوسطً سے چھوٹا یا پھر بہت چھوٹا ؟ </string>
    <string name="cb1701"> بہت بڑا </string>
    <string name="cb1702"> اوسطاً سے بڑا </string>
    <string name="cb1703"> اوسطاً </string>
    <string name="cb1704"> اوسطاً سے چھوٹا </string>
    <string name="cb1705"> بہت چھوٹا </string>
    <string name="cb1798"> معلوم نہیں </string>
    <string name="cb1009"> طالب علم </string>
    <string name="cb1010"> بےروزگار </string>
    <string name="cb16">کیا یہ پیدائش رجسٹرڈ تھی؟ اگر ہاں تو کہاں رجسٹرد تھی ؟ </string>
    <string name="cb1601"> رجسٹرڈ نہیں </string>
    <string name="cb1602">نادرا </string>
    <string name="cb1603">ایل ایچ ڈبلیو </string>
    <string name="cb1011">ہاتھ سے کام کرنے والے </string>
    <string name="cb1012">ریٹائرڈ، </string>
    <string name="cb1013">خاتون خانہ </string>
    <string name="cb1096">دیگر وضاحت کریں </string>
    <string name="cs01">بچے کالائن نمبر </string>
    <string name="cs02">بچے کانام </string>
    <string name="cs02a"> جواب دہندہ کے ساتھ بچے کا رشتہ کیا ہے؟</string>
    <string name="cs02a02">باپ</string>
    <string name="cs02a03">دیکھ بھال کرنے والا(والدین کے علاوہ)</string>
    <string name="cs02a04"> گھر کا کوئی اور فرد</string>
    <string name="cs02b"> جواب دہندہ کا نام</string>
    <string name="cs03"> کیا (نام) کو گزشتہ دو ہفتوں کے دوران اسہال(دست یا جلاب) ہوئے تھے؟ </string>
    <string name="cs0301">ہاں</string>
    <string name="cs0302">نہیں</string>
    <string name="cs04"> اسہال(دست یا جلاب) کے دوران بچے کو پینے والی اشیا کی کتنی مقدار دی گئی تھی؟ </string>
    <string name="cs0401"> معمول سے بہت کم </string>
    <string name="cs0402"> معمول سے کچھ کم </string>
    <string name="cs0403"> معمول جتنا ہی </string>
    <string name="cs0404"> معمول سے زیادہ / مزید </string>
    <string name="cs0405"> پینے کو کچھ نہیں دیا </string>
    <string name="cs0498"> معلوم نہیں </string>
    <string name="cs05">اسہال(دست یا جلاب) کے دوران بچے کو کھانے والی اشیاء کی کتنی مقدار دی گئی تھی؟</string>
    <string name="cs0501"> معمول سے بہت کم </string>
    <string name="cs0502"> معمول سے کچھ کم </string>
    <string name="cs0503"> معمول جتنا ہی </string>
    <string name="cs0504"> معمول سے زیادہ / مزید </string>
    <string name="cs0505"> کھانے کو کچھ نہیں دیا </string>
    <string name="cs0598"> معلوم نہیں </string>
    <string name="cs06"> کیا آپ نے اسہال (دست یا جلاب) کے لیے کسی سے مشورہ کیا یا علاج کروایا ؟ </string>
    <string name="cs0601"> ہاں </string>
    <string name="cs0602"> نہیں </string>
    <string name="cs07"> اسہال(دست یا جلاب) کے لیے آپ نے کس سے مشورہ کیا یا علاج کروایا؟ </string>
    <string name="title1"> پبلک سیکٹر </string>
    <string name="cs0701"> سرکاری ہسپتال </string>
    <string name="cs0702"> آر ایچ سی / ایم سی ایچ </string>
    <string name="cs0703"> بی ایچ یو </string>
    <string name="cs0704"> لیڈی ہیلتھ ورکر </string>
    <string name="cs0706"> نجی ہسپتال / کلینک </string>
    <string name="cs07961"> دیگر سرکاری مراکز </string>
    <string name="titel2"> نجی سیکٹر </string>
    <string name="cs0707"> میڈیکل اسٹور </string>
    <string name="cs0708"> پرائیوٹ ڈاکٹر </string>
    <string name="cs0709"> ہومیو پیتھ </string>
    <string name="cs0710"> ڈسپینسر / کمپاؤنڈر </string>
    <string name="cs0711"> حکیم </string>
    <string name="cs0712"> دائی </string>
    <string name="cs0713"> سی ایم ڈبلیو </string>
    <string name="cs0714"> نونہال ہیلتھ کیمپ </string>
    <string name="cs07962"> دوسرے نجی وضاحت کریں </string>
    <string name="cs08"> بچے کو اسہال ( دست یا جلاب ) کی بیماری کے علاج کے لئے کون کونسی دوا دی گئی ؟ </string>
    <string name="cs0801"> نمکول ( او آر ایس ) </string>
    <string name="cs08_title1"> گولیاں یا شربت </string>
</resources>