<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.aku.hassannaqvi.smk_pwd.ui.other.EndingActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="form"
            type="edu.aku.hassannaqvi.naunehal.models.Form" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/fldGrpEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- status Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVstatus"
                style="@style/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/q_status"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_hh26" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_toEndOf="@id/q_status"
                            android:layout_weight="1"
                            android:text="@string/hh26" />


                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/istatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/istatusa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{form.hh26.equals(`1`)}"
                            android:text="@string/hh2601" />

                        <RadioButton
                            android:id="@+id/istatusb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{form.hh26.equals(`2`)}"
                            android:text="@string/hh2602" />

                        <RadioButton
                            android:id="@+id/istatusc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{form.hh26.equals(`3`)}"
                            android:text="@string/hh2603" />

                        <RadioButton
                            android:id="@+id/istatusd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{form.hh26.equals(`4`)}"
                            android:text="@string/hh2604" />

                        <RadioButton
                            android:id="@+id/istatuse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{form.hh26.equals(`5`)}"
                            android:text="@string/hh2605" />

                        <RadioButton
                            android:id="@+id/istatusf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{form.hh26.equals(`6`)}"
                            android:text="@string/hh2606" />

                        <RadioButton
                            android:id="@+id/istatus96"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{form.hh26.equals(`96`)}"
                            android:text="@string/hh2696" />

                        <EditText
                            android:id="@+id/istatus96x"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hh2696"
                            android:maxLength="40"
                            android:tag="istatus96"
                            android:text="@{form.hh2696x}"
                            android:visibility='@{form.hh26.equals(`96`)? View.VISIBLE : View.GONE}' />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!--EndButton LinearLayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="18dp"
                android:orientation="vertical"
                android:padding="20dp">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/greenOverlay"
                    android:onClick="BtnEnd"
                    android:text="Save"
                    android:textColor="@color/white" />

            </LinearLayout>
            <!--EndButton LinearLayout-->

        </LinearLayout>

    </ScrollView>

</layout>